first API tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,8 @@ pythonpath = ["core",]
 env_files = .env
 
 addopts = -ra
+
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)s] %(message)s
+log_cli_date_format = %H:%M:%S
