--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BASE_URL=url.com
 BASE_DEMO_URL=https://bstackdemo.com/
 
-BASE_STORE_URL=https://petstore.swagger.io/v2
+BASE_PET_STORE_URL=https://petstore.swagger.io/v2
