--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ BASE_URL=url.com
 BASE_DEMO_URL=https://bstackdemo.com/
 
 BASE_PET_STORE_URL=https://petstore.swagger.io/v2
+
+BASIC_USER_NAME=test_bcn
+BASIC_USER_PASSWORD=test_bcn
