added data to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /.venv/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/Python_automation_examples.iml
+/.idea/vcs.xml
