added first ui test

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ BASE_URL=url.com
 BASE_DEMO_URL=https://bstackdemo.com/
 
 BASE_PET_STORE_URL=https://petstore.swagger.io/v2
+BASE_QA_DEMO_URL=https://demoqa.com
 
 BASIC_USER_NAME=test_bcn
 BASIC_USER_PASSWORD=test_bcn
