added pet service and tests

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BASE_URL=url.com
+BASE_URL=http://127.0.0.1:8001/
+
 BASE_DEMO_URL=https://bstackdemo.com/
 
 BASE_PET_STORE_URL=https://petstore.swagger.io/v2
